--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 html,
 body {
   font-family: "Open Sans", sans-serif;
+  color: #222;
 }
 
 h1,
@@ -38,6 +39,8 @@ p {
   border-radius: 30px;
   font-weight: 700;
   font-size: 14px;
+  border: 0px;
+  cursor: pointer;
 }
 
 .btn-primary {
@@ -50,9 +53,31 @@ p {
   color: white;
 }
 
+.btn-dark {
+  background: #222;
+  color: white;
+}
+
+.btn-dark:hover {
+  background: white;
+  color: #222;
+  border :1px solid #222
+}
+
+.contenair {
+  max-width: 1000px;
+  display: block;
+  margin: auto;
+}
+
 .my-10 {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.my-20 {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 /* ----------------------------------------------Header---------------------------------- */
@@ -117,4 +142,44 @@ p {
   font-size: 18px;
   letter-spacing: 0.5px;
   line-height: 1.9em;
+}
+
+/* --------------------------------------------FEATURES SECTION--------------------------- */
+
+.features {
+  overflow: auto;
+  padding: 100px 0px 100px 0px;
+  text-align: center;
+}
+
+.feature {
+  float: left;
+  width: 50%;
+}
+
+/* ---------------------------------PERSON---------------------------------------- */
+
+.person {
+  height: 400px;
+  background: url(../images/cafe3.jpg) center center/cover;
+}
+
+/* ---------------------------------RESERVATION---------------------------------------- */
+
+.reservation {
+  padding: 100px 0px 100px 0px;
+  text-align: center;
+}
+
+/* ---------------------------------FOOTER---------------------------------------- */
+
+footer{
+  background: #222;
+  color: white;
+  padding: 30px 0px 30px 0px;
+  text-align: center;
+}
+
+footer p {
+  margin-bottom: 0px;
 }
