--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ p {
 .btn-dark:hover {
   background: white;
   color: #222;
-  border :1px solid #222
+  border: 1px solid #222;
 }
 
 .contenair {
@@ -78,6 +78,28 @@ p {
 .my-20 {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.underline {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.chip {
+  display: inline-block;
+  text-align: center;
+  width: 30px;
+  border-radius: 100%;
+  background: #333;
+  color: white;
+}
+
+.chip-purple {
+  background: #be418c;
+}
+
+.chip-brown {
+  background: #8c5e24;
 }
 
 /* ----------------------------------------------Header---------------------------------- */
@@ -173,7 +195,7 @@ p {
 
 /* ---------------------------------FOOTER---------------------------------------- */
 
-footer{
+footer {
   background: #222;
   color: white;
   padding: 30px 0px 30px 0px;
@@ -182,4 +204,24 @@ footer{
 
 footer p {
   margin-bottom: 0px;
+}
+
+/* ---------------------------------WHERE---------------------------------------- */
+
+.where {
+  padding: 180px 0px 100px 0px;
+  overflow: auto;
+  min-height: 100vh;
+}
+
+.where img {
+  float: left;
+  width: 45%;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.where-text {
+  float: right;
+  width: 50%;
 }
