--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ p {
 /* -------------------------------------HERO SECTION (vp=value proposition)------------------------------- */
 
 .vp {
-  height: 700px;
+  min-height: 700px;
   background: url(../images/cafe1.jpg) center center;
   background-size: cover;
   text-align: center;
@@ -150,6 +150,7 @@ p {
 
 .vp-content {
   max-width: 600px;
+  padding:20px;
   padding-top: 150px;
   color: white;
   display: block;
@@ -157,7 +158,7 @@ p {
 }
 
 .vp-content h1 {
-  font-size: 50px;
+  font-size: 3rem;
 }
 
 .vp-content p {
@@ -170,7 +171,7 @@ p {
 
 .features {
   overflow: auto;
-  padding: 100px 0px 100px 0px;
+  padding: 100px 20px 100px 20px;
   text-align: center;
 }
 
@@ -189,7 +190,7 @@ p {
 /* ---------------------------------RESERVATION---------------------------------------- */
 
 .reservation {
-  padding: 100px 0px 100px 0px;
+  padding: 100px 20px 100px 20px;
   text-align: center;
 }
 
@@ -229,12 +230,13 @@ footer p {
 /* ---------------------------------CONTACT---------------------------------------- */
 
 .contact {
-  padding: 180px 0px 100px 0px;
+  padding: 100px 0px 50px 0px;
   min-height: 100vh;
 }
 
 .contact-form-container {
   max-width: 600px;
+  padding: 20px;
   margin: auto;
 }
 
